# pdfmind

./: .gitignore  README.md  pyproject.toml
docs/: plan.md
examples/output/: markdown.md  semantic_parsed_pdf.json  toc_data.json
notebooks/: test.ipynb
parser/: __init__.py  parser.py  prompts.py  utils.py
src/: __init__.py
src/pdfmind/: __init__.py  pdf_parser.py
src/pdfmind/processor/: __init__.py  image_processor.py  table_processor.py  toc_processor.py
src/pdfmind/prompts/: __init__.py
src/pdfmind/utils/: common_utils.py
src/pdfmind/utils/llm_utils/: llm_service.py
src/utils/: common_utils.py
