[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmind"
version = "0.1.0"
description = "PDF parsing module for clinical protocol documents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Author"}
]
dependencies = [
    "docling",
    "tqdm",
    "pandas",
    "markdown",
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "python-dotenv",
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdfmind*", "utils*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"